# SmartFileOrganizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/smartfileorganizer/: cli.py  config.py  deduplicator.py  organizer.py  utils.py  watcher.py
